# pineapple

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  NOTES  PLAN  README.md  TestNotebook.ipynb  TestNotebook2.ipynb  VERSIONS  requirements-base1.txt  requirements-base2.txt  requirements-extra1.txt  requirements-extra2.txt  requirements.txt  requirements2.txt  server.py  server.spec  test_font.html  test_wx.py  viewer.py  websocket.py  websocket_test.html
cmake/: Pineapple.plist.in
cmake/modules/: MacOSXBundleInfo.plist.in
config/: PATCH
custom/: ansi.css  ansi.less  buttons.css  buttons.less  cm-borlandia-text.less  cm-borlandia.css  cm-dark-text.less  cm-dark.css  common.less  custom.css  custom.js  custom.less  embedding.less  fonts.less  kbd.css  kbd.less  neat.less  print.less  readonly.less  rendered.css  rendered.less  tabs.less  theme-borlandia.css  theme-borlandia.less  theme-dark.css  theme-dark.less  theme-light.css  theme-light.less  theme-red.less  unittest.less
custom/fonts/: bitter-bold-webfont.eot  bitter-bolditalic-webfont.eot  bitter-italic-webfont.eot  bitter-regular-webfont.eot  ptm55ft-webfont.eot
custom/nbextensions/: button.js  readonly.js  tabs.js  theme.js
data/: kernel.json
data/demo/: TestNotebook.ipynb
data/examples/: Basics.ipynb  Editing.ipynb  Execution.ipynb  Packages.ipynb  Plotting.ipynb  ReadOnly.ipynb  RichOutput.ipynb  Video.ipynb  Welcome.ipynb  basics.ipynb
data/examples/python2.7/: Basics.ipynb  Editing.ipynb  Execution.ipynb  Markdown.ipynb  Packages.ipynb  Plotting.ipynb  RichOutput.ipynb  Timing.ipynb  Video.ipynb  Welcome.ipynb
data/examples/python3.5/: Basics.ipynb  Editing.ipynb  Execution.ipynb  Markdown.ipynb  Packages.ipynb  Plotting.ipynb  ReadOnly.ipynb  RichOutput.ipynb  Timing.ipynb  Video.ipynb  Welcome.ipynb
data/images/: Pineapple-Doc-1024.xcf  Pineapple-Doc.icns  Pineapple.icns
echokernel/: __init__.py  __main__.py  echokernel.py  kernel.json  kernel.py
eridani/: TestNotebook.ipynb  __init__.py  __main__.py  eridani.spec  server.py  setup.py
eridani/eridani/: __init__.py  __main__.py  _version.py  browser.py  mainapp.py  shim.py
images/: Pineapple.icns
licenses/: LICENSE.assets  LICENSE.certifi  LICENSE.decorator  LICENSE.jinja2  LICENSE.jupyter  LICENSE.libzmq  LICENSE.matplotlib  LICENSE.nose  LICENSE.numpy  LICENSE.pathpy  LICENSE.pexpect  LICENSE.pickleshare  LICENSE.pineapple  LICENSE.pycurl  LICENSE.python  LICENSE.pytz  LICENSE.pyzmq  LICENSE.setuptools  LICENSE.simplegeneric  LICENSE.six  LICENSE.terminado  LICENSE.tornado  LICENSE.wxwidgets
scripts/: bundle_fixer.py  clean-python.sh  eridani-ipykernel  eridani-ipykernel.spec  eridani-main  eridani-main.spec  make-icns.sh  make-toolbar-icons.py  pineapple-main.spec  pineapple-server  pineapple-server.spec  pip
src/: ExamplesFrame.cc  ExamplesFrame.hh  MainApp.cc  MainApp.hh  MainFrame.cc  MainFrame.hh  PreferencesManager.cc  PreferencesManager.hh  RecentManager.cc  RecentManager.hh  app.cc  callback.cc  callback.hh  config.h.in  config.hh.in  gui_util.cc  gui_util.hh  jsoncpp.cpp  loading.html  util.cc  util.hh
src/json/: json.h
tools/: fwpython
wxnotebook/: CMakeLists.txt
wxnotebook/src/: app.cc
wxtest/: app.py
